# mimarsinan

./: .gitignore  .gitmodules  .slurmech.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  TODO_SANAFE_STATIC_POWER.md  TUNING_ARCHITECTURE_GUIDE.md  TUNING_FUTURE_WORK.md  fix_attempt_log.md  fix_plan.md  followup_plan.md  probe_adversarial_verify.py  probe_c1_bitexact.py  probe_depth_sweep.py  probe_lif_qat_fix_study.py  probe_lif_resnet_decision_fidelity.py  probe_residual_balanced_check.py  probe_residual_baseline_incremental.py  probe_residual_fix_study.py  probe_residual_genuine_spiking_sweep.py  probe_residual_sync_ttfs.py  probe_residual_tier1_highT.py  probe_sweep_decision_fidelity.py  probe_sweep_fold.py  probe_train_resnet.py  pyrightconfig.json  pytest.ini  requirements.txt  run.py
.claude/: settings.json
docs/: ARCHITECTURE_STYLE.md  CERTIFICATION_PROTOCOL.md  COMPILAGENT_MULTI_OBJECTIVE_INTEGRATION.md  DESIGN_GOALS_and_refactoring_vectors.md  FRONTIER_PROGRAM.md  PUBLICATION_CAMPAIGN.md  SOFT_CORE_CONV_INEFFICIENCY.md  behavior_contract_unification.md  behavior_contract_unification_report.md  fast_lossless_plan.md  final_recommendations.md  fine_tuning_research_directions.md  gradual_finetuning_report.md  lossless_fast_campaign.md  mimarsinan_architecture_report.html  mimarsinan_commit_review.md  mimarsinan_final_refactor_review.md  mimarsinan_genuine_ttfs_review.md  mimarsinan_refactoring_report.md  perceptron_packaging.md  pipeline_pruning_compaction_implementation_plan.md  pipeline_pruning_compaction_investigation_report.md  segment_boundary_parity_report.md  transformation_adaptation_spec.md  tuning_accuracy_retention_report.md  tuning_optimization_flags.md
examples/: axon_tiling_sanity.py  cifar100_run.json  cifar10_arch_search_agent_evolve.json  cifar10_arch_search_kedi.json  cifar10_run.json  cifar10_torch_squeezenet11_pretrained.json  cifar10_torch_vit.json  (+26 more)
src/mimarsinan/chip_simulation/sanafe/plugins/: CMakeLists.txt  mimarsinan_dendrite.cpp  mimarsinan_soma.cpp  mimarsinan_ttfs_cascade_soma.cpp  mimarsinan_ttfs_continuous_soma.cpp  mimarsinan_ttfs_cycle_soma.cpp  mimarsinan_ttfs_quantized_soma.cpp
(+2484 files in other folders)
